<resources>
    <string name="app_name">Goals</string>
    <string name="loginBtn">Login</string>
    <string name="registerBtn">Register</string>
    <string name="emailAddrInput">Email Address</string>
    <string name="name">Name</string>
    <string name="lastname">Lastname</string>
    <string name="new_post">New post</string>
    <string name="new_post_btn">Post</string>
    <string name="goals_profile_tv">Goals</string>
    <string name="commentBtn">Comment</string>
    <string name="logoutAction">Logout</string>
    <string name="feed_nav">Feed</string>
    <string name="profile_nav">Profile</string>
    <string name="settings_nav">Settings</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="goalsListLabel">Select a few predefined goals:</string>
    <string name="goalSpinnerLabel">Select the goal of the post</string>
    <string name="post_title_label">Post title (optional)</string>
    <string name="post_content_hint">Post your content here</string>
    <string name="load_comments">Show comments</string>
    <string name="goals_colon">Goals:</string>
    <string name="edit_your_information">Edit your information</string>

    <!-- Toasts infos -->

    <string name="post_successfully_created">Post successfully created</string>
    <string name="server_error">There was an error, please try again later</string>
    <string name="no_int_connection">No internet connection</string>
    <string name="empty_fields">Fields cannot be empty</string>
    <string name="goal_select_for_post">Please select a goal for the post</string>
    <string name="email_already_exists">Email address exists already!</string>
    <string name="pass_dont_match">Passwords dont match</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="logged_out">Logged out</string>
    <string name="feed_toolbar_title">Feed</string>
    <string name="profile_toolbar_title">Profile</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="comments_toolbar_title">Comment section</string>
    <string name="newpost_toolbar_title">New post</string>
    <string name="no_goals_msg">You have no current goals yet, consider selecting a few ones in your profile</string>
    <string name="save_changes">Save changes</string>
    <string name="goal_request_submit">Goal request (s)</string>
    <string name="goal_request_label">No adequate goals for you? Request a new one</string>
    <string name="send">Send request</string>
    <string name="goalsListLabelEditProfile">Goals section</string>
    <string name="goal_request_toast_msg">Goal request was sent to the admins</string>
    <string name="goal_tip_msg">Use \'-\' instead of spaces</string>
    <string name="empty_field_singular">Field cannot be empty</string>
    <string name="loading_goals_msg">Loading goals...</string>
    <string name="loading_feed_msg">Loading feed...</string>
    <string name="profile_edit_success_msg">Profile edited succesfully</string>
    <string name="edit_your_password">Edit your password</string>

    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="new_password_conf">Confirm new password</string>
    <string name="save_new_password">Save new password</string>
    <string name="old_password_error">Old password is incorrect</string>
    <string name="password_update_success">Password updated successfully</string>
    <string name="comments">comment (s)</string>
    <string name="add_new_goals">Add new goals</string>
    <string name="no_feeds">No feeds</string>
    <string name="logging_in">Logging in</string>
    <string name="registering">Regisstering</string>
    <string name="you_have_no_posts">No posts</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="deutsch">German</string>
    <string name="spanish">Spanish</string>
    <string name="detect_automatically">Detect language from OS</string>
    <string name="motivate_yourself">Motivate yourself</string>
    <string name="do_it_along_others">Do it along others</string>
    <string name="share_yr_experiences">Share your experiences</string>
    <string name="motivation_desc">Everyone knows discipline is the key factor for achieving things, but motivation is what kicks in in first place</string>
    <string name="do_it_along_others_desc">Don\'t do it alone! You can get 3 times better results with the companion of others in your journey</string>
    <string name="share_exp_desc">Help others achieve their goals! Share your experiences</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="new_comment_notification">Someone commented on your post!</string>
    <string name="new_comment_notification_subtext"> commented on your post</string>
    <string name="disable_notifications">Disable notifications</string>
    <string name="notifications">Notifications</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="permission_necessary_explanation">Permission to read and write to the device\'s storage is needed for the notification system to work properly. If denied, notifications won\'t be able to work.</string>
    <string name="post_a_comment">Post a comment</string>
    <string name="delete_post_dialog_title">Delete post</string>
    <string name="delete_post_conf_message">Are your sure you want to delete this post?</string>
    <string name="delete_comment_title">Delete comment</string>
    <string name="delete_comment_conf_message">Are you sure you want to delete this comment?</string>
    <string name="post_deleted_msg">Post  deleted</string>
    <string name="new_post_in_group_notification">New post</string>
    <string name="new_post_in_group_notification_subtext">There is a new post on your group</string>
    <string name="disable_comment_notifications">Disable comment notifications</string>
    <string name="disable_post_notifications">Disable post notifications</string>
    <string name="log_out_alert_title">Log out</string>
    <string name="log_out_conf_message">Do you really want to log out?</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="upload_image">Upload image</string>

    <string name="open_img_alert_title">Open image</string>
    <string name="open_img_alert_text">Open image?</string>
    <string name="open_profile_alert_title">Open profile</string>
    <string name="open_profile_alert_text">Open profile of</string>
    <string name="edit_profile_toolbar_title">Edit profile</string>
    <string name="edit_password_toolbar_title">Edit password</string>
    <string name="session_settings_title">Session</string>
    <string name="logout_settings_btn_text">Logout</string>
    <string name="download">Download</string>
    <string name="share_image">Share</string>
    <string name="downloading_img_msg">Downloading item</string>
    <string name="downloads">Downloads</string>
    <string name="disallow_downloads_mobile_net">Don\'t allow downloads on mobile network</string>
    <string name="allow_downloads_mobile_net">Allow downloads on mobile network</string>
    <string name="notifications_others">Other notifications</string>
    <string name="img_downloads_mobile_low_quality">Download images on low quality when on mobile network</string>
    <string name="send_your_message">Send your message</string>
    <string name="chatRooms">Chats</string>
    <string name="send_private_message">Send private message</string>

    <array name="notification_settings">
        <item>Allow all notifications</item>
        <item>Disable comment notifications</item>
        <item>Disable post notifications</item>
        <item>Disable new messages notifications</item>
    </array>

    <array name="notification_settings_values">
        <item>allow</item>
        <item>comments</item>
        <item>posts</item>
        <item>messages</item>
    </array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_chats">You have no chats</string>
    <string name="loading_messages">Loading messages…</string>
    <string name="new_message_notification">You have new messages!</string>
    <string name="new_message_notification_text">sent you new messsages!</string>
    <string name="new_messages">Unread messages</string>
    <string name="delete_chat">Delete chat</string>
    <string name="delete_chat_conf_message">Are you sure you want to delete this chat? All messages will be removed for both ends</string>
    <string name="chat_room_deleted">Chat was deleted</string>
    <string name="online">Online</string>
    <string name="is_typing_a_message">Typing a message…</string>
    <string name="new_comment_notification_subscription">commented on a post your subscribed to!</string>
    <string name="unsubscribe_from_post">Unsubscribe from post</string>
    <string name="unsubcribed_from_post">Unsubscribed</string>
    <string name="loading_image_msg">Loading image</string>
    <string name="upload_video">Upload video</string>
    <string name="file_is_too_large">The selected file is too large, maximum is 50MB</string>
    <string name="error_ocurred">An error ocurred</string>
    <string name="uploading_post">Uploading your post</string>
    <string name="successfully_registered">Successfully registered, please now log in</string>
    <string name="report_this_post">Report this post</string>
    <string name="undo">Undo</string>
    <string name="last_online">Last online</string>
    <string name="see_user_goals">See goals</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>

    <string name="cannot_load_posts">Unable to load posts</string>
    <string name="user_has_no_goals">No goals</string>
    <string name="cannot_load_comments">Unable to load comments</string>
    <string name="cannot_load_messages">Unable to load messages</string>
    <string name="cannot_load_chats">Unable to load  chats</string>
    <string name="chat_room_deleted_by_other">deleteted the chat</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
