<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/notifications">
        <SwitchPreference
            app:key="notifications"
            app:title="@string/disable_notifications"/>
        <ListPreference
            app:defaultValue="allow"
            app:key="notifications_other"
            app:title="@string/notifications_others"
            app:entries="@array/notification_settings"
            app:entryValues="@array/notification_settings_values"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/downloads">
        <SwitchPreference
            app:key="allow_downloads_mobile_net"
            app:title="@string/img_downloads_mobile_low_quality"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/session_settings_title">
        <Preference android:title="@string/logout_settings_btn_text"
            android:key="logout" />
    </PreferenceCategory>

</PreferenceScreen>