<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/feedFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/feed_nav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile_nav"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/chatsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_chat_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/chatRooms"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings_black_24dp"
        app:showAsAction="ifRoom"
        android:title="@string/settings_nav"/>
</menu>