<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_request_label"
        android:layout_marginBottom="5dp"
        android:id="@+id/newGoalsLabel"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/goalsEditText"
        android:hint="@string/goal_request_submit" />


     <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:background="@drawable/custom_btn_form"
        android:padding="10dp"
        android:id="@+id/sendGoalsReqBtn"/>

</LinearLayout>