<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:padding="@dimen/padding_10_2"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/unsubscribe"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribe_from_post"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:id="@+id/deletePost"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_post_dialog_title"
        android:textSize="@dimen/text_size_18"/>

    <TextView
        android:id="@+id/reportPost"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/report_this_post"
        android:textSize="@dimen/text_size_18"/>



</LinearLayout>