<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.EditPasswordFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/oldPassword"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/old_password"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text_forms"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="30dp"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPassword"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/new_password"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text_forms"
            android:layout_margin="10dp"
            android:layout_below="@id/oldPassword"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newPasswordConf"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            android:hint="@string/new_password_conf"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text_forms"
            android:layout_margin="10dp"
            android:layout_below="@id/newPassword"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_btn_form"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_alignParentBottom="true"
            android:text="@string/save_new_password"
            android:id="@+id/saveNewPasswordBtn"/>
    </RelativeLayout>

</FrameLayout>