<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="myVM" type="com.example.tm18app.viewModels.NewPostViewModel" />
    </data>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".fragment.NewPostFragment">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/inAppBackgroundColor">

            <TextView
                android:id="@+id/newPostTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/new_post"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/newPostTv"
                android:hint="@string/post_title_label"
                android:id="@+id/postTitle"
                android:text="@={myVM.title}"
                android:padding="10dp"
                android:background="@drawable/custom_edit_text_forms"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/inputTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:layout_below="@id/postTitle"
                android:text="@={myVM.content}"
                android:layout_marginStart="10dp"
                android:background="@drawable/custom_edit_text_forms"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:hint="@string/post_content_hint"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/goalSpinnerLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_below="@id/inputTextEdit"
                android:text="@string/goalSpinnerLabel" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_below="@id/goalSpinnerLabel"
                android:id="@+id/goalTagsSpinner" />

            <Button
                android:id="@+id/newPostBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:background="@drawable/custom_btn_form"
                android:onClick="@{() -> myVM.onNewPostClicked()}"
                android:layout_alignParentBottom="true"
                android:text="@string/new_post_btn"
                android:layout_below="@id/goalTagsSpinner"/>


        </RelativeLayout>


    </FrameLayout>
</ScrollView>
</layout>