<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="myVM" type="com.example.tm18app.viewModels.RegisterViewModel" />
    </data>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/main_pages_background">


        <EditText
            android:id="@+id/nameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:padding="10dp"
            android:text="@={myVM.name}"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_edit_text_forms"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/lastnameInput" />

        <EditText
            android:id="@+id/lastnameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:background="@drawable/custom_edit_text_forms"
            android:hint="@string/lastname"
            android:text="@={myVM.lastname}"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/emailAddresInputRegister" />

        <EditText
            android:id="@+id/emailAddresInputRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:hint="@string/emailAddrInput"
            android:background="@drawable/custom_edit_text_forms"
            android:text="@={myVM.email}"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordInputRegister"/>

        <EditText
            android:id="@+id/passwordInputRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_edit_text_forms"
            android:ems="10"
            android:padding="10dp"
            android:inputType="textPassword"
            android:text="@={myVM.password}"
            android:hint="@string/password"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordInputRegisterConf"/>

        <EditText
            android:id="@+id/passwordInputRegisterConf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/custom_edit_text_forms"
            android:inputType="textPassword"
            android:hint="@string/confirm_password"
            android:text="@={myVM.passwordConf}"
            android:layout_marginBottom="30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/goalsComboBox"/>
        <TextView
            android:id="@+id/goalsListLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goalsListLabel"
            android:textStyle="bold"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@id/goalsComboBox"
            app:layout_constraintLeft_toLeftOf="@id/goalsComboBox"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/goalsComboBox"
            android:layout_width="match_parent"
            android:layout_marginEnd="50dp"
            android:layout_marginStart="50dp"
            android:layout_height="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/registrationBtn"/>

        <Button
            android:id="@+id/registrationBtn"
            android:layout_width="197dp"
            android:layout_height="48dp"
            android:layout_marginBottom="96dp"
            android:background="@drawable/custom_btn_form"
            android:text="@string/registerBtn"
            android:onClick="@{() -> myVM.onRegister()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout></layout>